--- a/face.html
+++ b/face.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <script src="./face.js"></script>
   </head>
-  <body></body>
-  <script src="./face.js"></script>
+  <body>
+    <div class="wrap">
+      <video class="webcam"></video>
+      <canvas class="video"></canvas>
+      <canvas class="face"></canvas>
+    </div>
+    <style>
+      body {
+        background: yellow;
+      }
+    </style>
+  </body>
 </html>
