--- a/face.html
+++ b/face.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Pixelated Face Filter</title>
     <script src="./face.js"></script>
   </head>
   <body>
