--- a/face.html
+++ b/face.html
@@ -12,6 +12,32 @@
       <canvas class="video"></canvas>
       <canvas class="face"></canvas>
     </div>
+    <div class="controls">
+      <label for="SCALE">
+        SCALE:
+        <input
+          value="1.35"
+          type="range"
+          name="SCALE"
+          min="0.3"
+          max="3"
+          step="0.1"
+          class="slider"
+        />
+      </label>
+      <label for="SIZE">
+        SIZE:
+        <input
+          value="10"
+          type="range"
+          name="SIZE"
+          min="1"
+          max="100"
+          step="1"
+          class="slider"
+        />
+      </label>
+    </div>
     <script src="./face.js"></script>
     <style>
       * {
@@ -37,6 +63,38 @@
 
       .face {
         position: absolute;
+      }
+
+      .controls {
+        text-align: center;
+        font-family: "Segoe UI" "Open Sans", "Helvetica Neue", sans-serif;
+        margin-bottom: 10px;
+      }
+
+      .slider {
+        -webkit-appearance: none;
+        width: 20%;
+        height: 10px;
+        border-radius: 50px;
+        background: black;
+        outline: none;
+        opacity: 0.7;
+        -webkit-transition: 0.1s;
+        transition: opacity 0.1s;
+      }
+
+      .slider:hover {
+        opacity: 1;
+      }
+
+      .slider::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        background: rgb(113, 41, 146);
+        cursor: pointer;
       }
     </style>
   </body>
