some css changes

--- a/face.html
+++ b/face.html
@@ -50,7 +50,9 @@
 
       .wrap {
         position: relative;
-        min-height: 100vh;
+        margin-top: 100px;
+        margin-bottom: 50px;
+        min-height: 50vh;
         display: grid;
         justify-content: center;
         align-items: center;
