--- a/face.html
+++ b/face.html
@@ -45,7 +45,7 @@
       }
       body {
         margin: 0;
-        background: yellow;
+        background: white;
       }
 
       .wrap {
@@ -69,8 +69,10 @@
 
       .controls {
         text-align: center;
-        font-family: "Segoe UI" "Open Sans", "Helvetica Neue", sans-serif;
+        font-family: "Times New Roman", Times, serif;
         margin-bottom: 10px;
+        font-weight: 500px;
+        color: black;
       }
 
       .slider {
@@ -95,7 +97,7 @@
         width: 25px;
         height: 25px;
         border-radius: 50%;
-        background: rgb(113, 41, 146);
+        background: red;
         cursor: pointer;
       }
     </style>
